# inform-systems-lab

./: Cargo.toml  README.md  docker-compose.yml  prometheus.yml  users.db
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: main.rs
data-generator/: Cargo.toml  Dockerfile
data-generator/src/: main.rs
grafana/provisioning/dashboards/: dashboard_provisioning.yml  db_dashboard.json
scripts/: init_db.sql  login_client.py
