[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.28", features = ["bundled"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
