[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
prometheus = "0.13"
actix-web = "4.0"
lazy_static = "1.5.0"
lapin = { version = "2", features = ["rustls"] }
anyhow = "1"
